@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.5 2007/04/12 09:55:19 martti Exp $
+$NetBSD: distinfo,v 1.6 2009/09/16 02:25:35 reed Exp $
 
-SHA1 (xfce4-datetime-plugin-0.5.0.tar.gz) = f18d788a907c251a6b586a15b1deb4eac0a0cb95
-RMD160 (xfce4-datetime-plugin-0.5.0.tar.gz) = 82923dcf911f9e7dc62543e3ef568e693694b14e
-Size (xfce4-datetime-plugin-0.5.0.tar.gz) = 374366 bytes
+SHA1 (xfce4-datetime-plugin-0.6.1.tar.bz2) = 7ad64f68787446e8daf5102fc0691bd8e4cc2fa6
+RMD160 (xfce4-datetime-plugin-0.6.1.tar.bz2) = 347b225b28195f07ac6954d5a70b9850c0629f09
+Size (xfce4-datetime-plugin-0.6.1.tar.bz2) = 289328 bytes
